# corrmatch-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  rustfmt.toml
.github/workflows/: audit.yml  ci.yml  publish-docs.yml  release.yml  test_py.yml
benches/: corrmatch.rs
corrmatch-cli/: Cargo.toml  config.example.json  config.schema.json
corrmatch-cli/src/: main.rs
corrmatch-py/: Cargo.toml  README.md  pyproject.toml
corrmatch-py/python/corrmatch/: __init__.py
corrmatch-py/python/tests/: conftest.py  test_synthetic.py
corrmatch-py/src/: lib.rs
docs/: CODE_REVIEW.md
src/: lib.rs  lowlevel.rs  trace.rs
src/bank/: angles.rs  mod.rs
src/candidate/: mod.rs  nms.rs  topk.rs
src/image/: io.rs  mod.rs  pyramid.rs
src/kernel/: mod.rs  rayon.rs  scalar.rs  simd.rs
src/refine/: mod.rs  quad1d.rs  quad2d.rs
src/search/: coarse.rs  mod.rs  refine.rs  scan.rs
src/template/: mod.rs  plan.rs  rotate.rs
src/util/: error.rs  math.rs  mod.rs
tests/: angles_rotation_cache.rs  core_types.rs  masked_zncc_correctness.rs  pipeline_end_to_end.rs  rayon_equivalence.rs  refinement_integration.rs  synthetic_validation.rs
tools/synth_cases/: README.md  generate_cases.py
