[package]
name = "corrmatch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/corrmatch-rs"
categories = ["algorithms", "multimedia::images", "science"]
keywords = ["template-matching", "image-processing", "zncc", "pyramid", "rotation"]

[dependencies]
thiserror = "1"
rayon = { version = "1", optional = true }
wide = { version = "1", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
rand = "0.9"
criterion = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
default = []
rayon = ["dep:rayon"]
simd = ["dep:wide"]
image-io = ["dep:image"]

[workspace]
members = ["corrmatch-cli", "corrmatch-py"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/corrmatch-rs"
