[package]
name = "corrmatch-py"
version = "0.1.0"
description = "Python bindings for corrmatch template matching library"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobins = false

[lib]
name = "corrmatch"
crate-type = ["cdylib"]
path = "src/lib.rs"
doc = false

[dependencies]
corrmatch = { path = "..", features = ["image-io", "rayon"] }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
numpy = "0.27"

[build-dependencies]
pyo3-build-config = "0.27"
